Placeクラス追加

--- a/ARKitConvenienceStoreSearch/Info.plist
+++ b/ARKitConvenienceStoreSearch/Info.plist
@@ -46,5 +46,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Acquire location information while using the application</string>
+
 </dict>
 </plist>
